fix align items center

--- a/cd2024bfs1g1-frontend/src/main/ngx/src/app/main/data-analysis/data-analysis-home/data-analysis-home.component.css
+++ b/cd2024bfs1g1-frontend/src/main/ngx/src/app/main/data-analysis/data-analysis-home/data-analysis-home.component.css
@@ -9,7 +9,8 @@
 }
 
 .no-chart{
-    padding-left: 4vw; 
+    display: flex;
+    justify-content: center;
 }
 
 h1{
